--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	
 	
 	<link rel="shortcut icon" type="image/png" href="./favicon.png">
-	
-	
+	<script src="./hooks.js"></script>
 	<script type="text/javascript" src="./Run3.js"></script>
 	
 	<script>
@@ -55,6 +54,13 @@
 
 	</style>
 	
+	<!-- <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+		new Crate({
+			server: '393531852763168768',
+			channel: '402146033838063617',
+			shard: 'https://disweb.dashflo.net'
+		})
+	</script> -->
 </head>
 <body>
 	
