--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 		#openfl-content { background: #000000; width: 100%; height: 100%; }
 		@font-face {
 			font-family: 'Comfortaa Bold';
-			src: url('font/COMFORTAA-BOLD.eot?#iefix') format('embedded-opentype'),
+			src: url('font/COMFORTAA-BOLD.eot?') format('embedded-opentype'),
 			url('font/COMFORTAA-BOLD.woff') format('woff'),
 			url('font/COMFORTAA-BOLD.TTF') format('truetype'),
-			url('font/COMFORTAA-BOLD.svg#Comfortaa%20Bold') format('svg');
+			url('font/COMFORTAA-BOLD.svg') format('svg');
 			font-weight: normal;
 			font-style: normal;
 		}
 		@font-face {
 			font-family: 'Comfortaa';
-			src: url('font/Comfortaa.eot?#iefix') format('embedded-opentype'),
+			src: url('font/Comfortaa.eot') format('embedded-opentype'),
 			url('font/Comfortaa.woff') format('woff'),
 			url('font/Comfortaa.otf') format('truetype');
 			font-weight: normal;
@@ -44,10 +44,10 @@
 		}
 		@font-face {
 			font-family: 'Permanent Marker';
-			src: url('font/PERMANENTMARKER.eot?#iefix') format('embedded-opentype'),
+			src: url('font/PERMANENTMARKER.eot') format('embedded-opentype'),
 			url('font/PERMANENTMARKER.woff') format('woff'),
 			url('font/PERMANENTMARKER.TTF') format('truetype'),
-			url('font/PERMANENTMARKER.svg#Permanent%20Marker') format('svg');
+			url('font/PERMANENTMARKER.svg') format('svg');
 			font-weight: normal;
 			font-style: normal;
 		}
